# tiralabra-22-summer

./: README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  maarittely.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md
src/: __main__.py
